# docker-kubernetes

./: .env.example  .gitignore  README.md  compose.yaml  my-first-pod.yaml
api/: Cargo.toml  Dockerfile  Dockerfile.fat
api/src/: lib.rs  main.rs
api/src/handlers/: book_handler.rs  mod.rs
api/src/models/: author.rs  book.rs  genre.rs  mod.rs
db/: backup.tar
k8s/: api-deployment.yaml  api-service.yaml  postgres-deployment.yaml  postgres-service.yaml
k8s/configmap/: example.yaml
k8s/daemonset/: api.yaml
k8s/db/: postgres-backup.yaml  postgres-pv.yaml  postgres-pvc.yaml
k8s/deployments/: api.yaml  postgres.yaml
k8s/secret/: create_secret.sh  secret.yaml
k8s/statefulset/: postgres.yaml
scripts/: init.bat  init.sh  readme.md  rundb.bat  rundb.sh
