[package]
name = "library-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum  = "0.6"
sqlx  = { version = "0.7.3" , features = ["postgres", "runtime-tokio", "tls-rustls" ] }
tokio = { version = "1.36",   features = ["full"] }
serde = { version = "1",      features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
